--- a/Trabalho segmentado/Redução da dimensão das amostras.ipynb
+++ b/Trabalho segmentado/Redução da dimensão das amostras.ipynb
@@ -183,7 +183,7 @@
     "  - Cria um novo DataFrame com as características calculadas.\n",
     "  - Salva o DataFrame resultante em um arquivo CSV.\n",
     "\n",
-    "*' train_redu.cs'*v e*' test_redu.cs'*  conterão 3 as seguintes colunas: label \r\n",
+    "*' train_redu.cs'*v e*' test_redu.cs'*  conterão 3 as seguintes colunas: label \n",
     "intensidade e simetria"
    ]
   },
@@ -409,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
